# Launcher

./: .gitignore  Cargo.toml  PLAN.md  README.md
src/: launcher_widget.rs  main.rs  main_window.rs  mainwindow.glade  message.rs  plugin.rs  querier.rs  query.rs  query_result_view.rs  row_data.rs  state.rs
