[package]
name = "launcher"
version = "0.0.0"
license = "GPL-3,0-or-later"
description = "A Wayland-native system launcher"
readme = "README.md"
homepage = "https://github.com/mnussbaum/launcher"
repository = "https://github.com/mnussbaum/launcher"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
url = "1.4"
futures-preview = { version = "0.3.0-alpha.15", optional = true}
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
pango = "^0"
cairo-rs = { version = "^0", features = ["png"] }

[features]
gtk_3_18 = [
  "gtk/v3_18",
  "gdk-pixbuf/v2_32",
  "gdk/v3_18",
  "gio/v2_46",
  "glib/v2_46",
  "pango/v1_38",
]
gtk_3_22_30 = [
  "gtk_3_18",
  "gtk/v3_22_30",
  "gdk-pixbuf/v2_36",
  "gdk/v3_22",
  "gio/v2_56",
  "glib/v2_56",
  "pango/v1_42",
]
gtk_3_24 = [
  "gtk_3_22_30",
  "gtk/v3_24",
  "atk/v2_30",
  "gdk-pixbuf/v2_36_8",
  "gdk/v3_24",
  "gio/v2_58",
  "glib/v2_58",
]
futures = ["futures-preview", "glib/futures", "gio/futures"]
subclassing = ["glib/subclassing"]
