[package]
name = "launcher"
version = "0.0.0"
license = "GPL-3,0-or-later"
description = "A Wayland-native system launcher"
readme = "README.md"
homepage = "https://github.com/mnussbaum/launcher"
repository = "https://github.com/mnussbaum/launcher"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
edition = "2018"

[dependencies]
glib = "^0"
gtk = "^0"
nom = "^5"
semver = "^0"
