[package]
name = "launcher"
version = "0.0.0"
license = "GPL-3,0-or-later"
description = "A Wayland-native system launcher"
readme = "README.md"
homepage = "https://github.com/mnussbaum/launcher"
repository = "https://github.com/mnussbaum/launcher"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.0"
directories = "2.0"
tokio = { version = "0.2", features = ["full"] }
nom = "^5"
semver = "^0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.iced_native]
git = "https://github.com/hecrj/iced.git"
branch = "master"

[dependencies.iced_futures]
git = "https://github.com/hecrj/iced.git"
features = ["tokio"]
branch = "master"

[dependencies.iced]
git = "https://github.com/hecrj/iced.git"
branch = "master"
features = ["async-std"]
